@@ -1373,7 +1373,7 @@ main(int ac, char **av)
 				if ((options.protocol & SSH_PROTO_1) &&
 				    key_used == 0) {
 					/* Schedule server key regeneration alarm. */
-					signal(SIGALRM, key_regeneration_alarm);
+					mysignal(SIGALRM, key_regeneration_alarm);
 					alarm(options.key_regeneration_time);
 					key_used = 1;
 				}
@@ -1462,7 +1462,7 @@ main(int ac, char **av)
 	 * mode; it is just annoying to have the server exit just when you
 	 * are about to discover the bug.
 	 */
-	signal(SIGALRM, grace_alarm_handler);
+	mysignal(SIGALRM, grace_alarm_handler);
 	if (!debug_flag)
 		alarm(options.login_grace_time);
 
